Created basic layout and user interface for login/sign-up. Added 2 Successful API requests for sign-up/login.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  background-image: url('../../../public/home-background.jpg');
+
+}
+
+p {
+  color: white;
+  margin: auto;
+}
+
+.btn-group {
+  margin: auto;
+}
