--- a/assets/scripts/templates/group-listing.handlebars
+++ b/assets/scripts/templates/group-listing.handlebars
@@ -1,19 +1,18 @@
 {{#each groups as |group|}}
   {{log group}}
 
-  <div data-id="{{group.id}}">
-    <h1> <small>{{group.name}}</small></h1>
-    <p>{{group.description}}</p>
-
-    <h2>Members:</h2>
-    {{#if group.user.name}}
-      {{group.user.name}}
-    {{else}}
-      No members.
-    {{/if}}
-    <button class="btn btn-primary" data-id="{{group.id}}" type="submit">Remove</button>
-    <button class="btn btn-primary" data-id="{{group.id}}" type="submit">Join</button>
+  <div class="card text-center">
+  <div class="card-header">
+    Featured
   </div>
+  <div class="card-body">
+    <h5 class="card-title">{{group.name}}</h5>
+    <p class="card-text">Description: {{group.description}}</p>
+  </div>
+  <div class="card-footer text-muted">
+    <button data-id="{{group.id}}" class="btn join" type="submit">Join</button>
+  </div>
+</div>
 
 
 {{/each}}
