Added functioning join group, join events, CRUD for events, and added responsiveness for mobile. User has different options for events and groups they organized.  User can see who is attending events.

--- a/assets/scripts/templates/group-listing.handlebars
+++ b/assets/scripts/templates/group-listing.handlebars
@@ -1,4 +1,4 @@
-{{#each groups as |group|}}
+{{#with group as |group|}}
   {{log group}}
 
   <div class="card text-center">
@@ -15,4 +15,4 @@
 </div>
 
 
-{{/each}}
+{{/with}}
