--- a/assets/scripts/templates/create-group-list.handlebars
+++ b/assets/scripts/templates/create-group-list.handlebars
@@ -12,6 +12,8 @@
   <div class="card-footer text-muted">
     <button data-id="{{group.id}}" class="btn delete" type="submit">Delete</button>
     <button data-toggle="modal" data-target="#modal{{group.id}}" class="btn" type="submit">Edit</button>
+    <button data-toggle="modal" data-target="#eventModal{{group.id}}" class="btn btn-primary-success" type="submit">Add Event</button>
+    <button data-id="{{group.id}}" class="btn events" type="submit">Events</button>
   </div>
 </div>
 
@@ -46,5 +48,44 @@
       </div>
     </div>
 
+<!-- Add Events Modal -->
+    <div class="modal fade" id="eventModal{{group.id}}" data-backdrop="false" tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Create Event:</h5>
+                <button type="button" class="close" data-dismiss="modal">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+
+                <form class="event" data-id="{{group.id}}">
+            <div class="form-group">
+              <label>Event Name:</label>
+              <input type="text" name="event[name]" class="form-control" placeholder="Enter event name">
+            </div>
+            <div class="form-group">
+              <label>Description:</label>
+              <input type="text" name="event[description]" class="form-control" placeholder="Enter event description">
+            </div>
+            <div class="form-group">
+              <label>Location:</label>
+              <input type="text" name="event[location]" class="form-control" placeholder="Enter event location">
+            </div>
+            <div class="form-group">
+              <label>Date and Time:</label>
+              <input type="datetime-local" name="event[date_time]" class="form-control">
+            </div>
+            <button data-id="{{group.id}}" class="btn btn-primary-success"  type="submit">Submit</button>
+          </form>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
 {{/with}}
